# classification

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  TODO.md  USAGE_GUIDE.md  check_device.py  comprehensive_test.py  docker-compose.yml  main.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  test_api_endpoints.py  test_basic_components.py  test_enhanced_segmenter.py  test_markdown.md  test_mps.py  test_service.py
config/: settings.py
examples/: api_client.py  basic_usage.py  sample_document.md
src/: __init__.py
src/api/: app.py  models.py
src/core/: bert_model.py  chunk_processor.py  enhanced_multi_task_segmenter.py  enhanced_semantic_segmenter.py  hybrid_segmenter.py  multi_task_framework.py  semantic_segmenter.py  sentence_transformer_model.py  text_type_detector.py  topic_consistency_evaluator.py  transformer_segmenter.py
src/utils/: chinese_optimizer.py  markdown_processor.py  text_processor.py
static/: index.html
templates/: upload.html
tests/: conftest.py  test_api.py  test_markdown_processor.py  test_performance.py  test_semantic_segmentation.py  test_text_processor.py
